# translator

./: LICENSE  README.md
xdl/: .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  COPYING.txt  LICENSE.txt  NEWS.md  NOTICE.txt  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
xdl/documentation/: Makefile  conf.py  generate_standard_docs.py  index.rst  install.rst  makedocs.sh
xdl/documentation/development/: index.rst  making_dynamic_step.rst  making_new_step.rst  platforms.rst  testing_new_step.rst  xdl_base.rst
xdl/documentation/old_standard/: full-steps-specification.rst  future-proposals.rst  index.rst  schema.rst  steps-overview.rst  xdl-file-structure.rst
xdl/documentation/src/: modules.rst  xdl.blueprints.rst  xdl.constants.rst  xdl.context.rst  xdl.errors.rst  xdl.execution.abstract_executor.rst  xdl.execution.client.rst  xdl.execution.rst  xdl.execution.utils.rst  xdl.hardware.rst  xdl.localisation.collection.rst  xdl.localisation.rst  xdl.metadata.rst  xdl.parameters.rst  xdl.platforms.abstract_platform.rst  xdl.platforms.placeholder.rst  xdl.platforms.rst  xdl.readwrite.errors.rst  xdl.readwrite.json.rst  xdl.readwrite.rst  xdl.readwrite.utils.rst  xdl.readwrite.validation.rst  xdl.readwrite.xml_generator.rst  xdl.readwrite.xml_interpreter.rst  xdl.reagents.rst  xdl.rst  xdl.steps.base_steps.rst  xdl.steps.core.abstract_async_step.rst  xdl.steps.core.abstract_base_step.rst  xdl.steps.core.abstract_dynamic_step.rst  xdl.steps.core.abstract_step.rst  xdl.steps.core.rst  xdl.steps.core.step.rst  xdl.steps.logging.rst  (+61 more)
xdl/scripts/: standby.py  test.py
xdl/tests/: pytest.ini  utils.py
xdl/xdl/: __init__.py  blueprints.py  constants.py  context.py  errors.py  hardware.py  metadata.py  parameters.py  reagents.py  variables.py  xdl.py  xdl_controller.py
(+1020 files in other folders)
