[metadata]
name = xdl
description = Package for working with XDL (chemical descriptive language).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/croningroup/chemputer/xdl
author = Cronin Group
license = AGPL-3.0
license_file = LICENSE.txt
license_files = LICENSE.txt, COPYING.txt, NOTICE.txt
classifiers =
    License :: Dual License
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    appdirs>=1
    nest-asyncio>=1.5.5
    networkx>=2
    pandas>=1.2.3
    python-socketio==4.6.0
    tabulate>=0.8.7
    termcolor>=1
    websocket-client==0.57.0
    importlib-metadata>=4.6.0;python_version < "3.8"
python_requires = >=3.7
include_package_data = True
platforms = windows
zip_safe = True

[options.extras_require]
chemputer =
    ChemputerAPI@git+ssh://git@gitlab.com/croningroup/chemputer/chemputerapi.git
    SerialLabware@git+ssh://git@gitlab.com/croningroup/chemputer/seriallabware.git@master
    chempiler@git+ssh://git@gitlab.com/croningroup/chemputer/chempiler.git
    chemputerxdl@git+ssh://git@gitlab.com/croningroup/chemputer/chemputerxdl.git
    commanduinolabware@git+ssh://git@gitlab.com/croningroup/chemputer/commanduinolabware.git
docs =
    sphinx~=4.4.0
    sphinx-autodoc-typehints>=1.11.0
    sphinx-rtd-theme>=1.0.0
testing =
    pytest>=6.0
    pytest-cov>=3.0
    pytest-xdist>=2.5
    xdl[chemputer]

[options.package_data]
xdl = localisation/*.json
